[package]
name = "macchanger"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.88"
clap = { version = "4.5.17", features = ["derive"] }
macaddr = "1.0.1"
thiserror = "1.0.63"

[dependencies.windows]
version = "0.58.0"
features = [
  "Win32_NetworkManagement_IpHelper",
  "Win32_NetworkManagement_Ndis",
  "Win32_Networking_WinSock"
]

[lib]
name = 'macchanger_lib'
path = "src/lib.rs"

[[bin]]
name = "macchanger"
path = "src/main.rs"
