[package]
name = "macchanger-cli"
description = "A simple cli tool to change the MAC address of your network interface"
repository = "https://github.com/K0enm/macchanger"
version = "0.2.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0.88"
clap = { version = "4.5.17", features = ["derive"] }
hex = "0.4.3"
macaddr = "1.0.1"
rand = "0.8.5"
thiserror = "1.0.63"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29.0", features = ["ioctl", "net"] }
pci-ids = "0.2.5"

[target.'cfg(windows)'.dependencies.windows]
version = "0.58.0"
features = [
  "Win32_NetworkManagement_IpHelper",
  "Win32_NetworkManagement_Ndis",
  "Win32_Networking_WinSock",
  "Win32_System_Registry",
  "Win32_NetworkManagement_WindowsFirewall",
  "Win32_System_Com"
]

[lib]
name = 'macchanger_lib'
path = "src/lib.rs"

[[bin]]
name = "macchanger"
path = "src/main.rs"

[profile.release]
opt-level = "z"
codegen-units = 1
lto = "fat"
strip = "symbols"
